@@ -36,6 +36,10 @@ Decklin Foster
 	Info box looks nicer
 David <IM: CrazyDavy>
 	The neato-bigger text box
+S D Erle
+	Writing a cool perl script to translate WinAIM lists to gaim
+BMiller
+	Translating perl code to C so gaim can import lists itself
 
 G. Sumner Hayes <IM: SumnerFool> Security Patches
 Brian Ryner for a little make file patch :)
